[Regression from 3.36.3] Displaying events in calendar when changing month is delayed
Affected version
- Fedora 32
- Gnome-shell 3.36.4. This was not an issue in 3.36.3.
Bug summary
Displaying the events of a specific day in the calendar is delayed when selecting a different day from another month. The only calendar related change I see that landed in 3.36.4 was !1164 (merged), so I guess that is causing the regression.
Steps to reproduce
- Use gnome-calendar to add a test event at 1 August 2020.
- Open gnome-shells calendar pop-up.
- Select 1 August 2020 in the calendar.
What happened
The test event shows up in the event list with a noticeable delay.
What did you expect to happen
The test event shows up immediately. This was also the behaviour in 3.36.3.
Edited by Björn Daase